--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,6 +13,7 @@ collections:
     label: 'Proposals'
     folder: '_research-questions'
     create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
     fields:
