--- a/admin/config.yml
+++ b/admin/config.yml
@@ -32,8 +32,9 @@ collections:
     label: 'Arbeiten'
     folder: '_works'
     create: true
+    sortable_fields: ['date', 'title', 'type', 'author']
     slug: "{{author}}-{{slug}}-{{date}}"
-    summary: "{{author}}: {{title}} // {{type}}"
+    summary: "{{date}} {{author}}: {{title}} // {{type}}"
     editor:
       preview: false
     fields:
@@ -45,8 +46,8 @@ collections:
         name: date
         widget: "datetime"
         default: ""
-        date_format: "DD.MM.YYYY" # e.g. 24.12.2021
-        format: "LLL"
+        date_format: "YYYY-MM-DD" # e.g. 24.12.2021
+        format: "YYYY-MM-DD"
         picker_utc: true
         required: true
       - { label: 'Body', name: 'body', widget: 'markdown' }
